--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -7,6 +7,9 @@ on:
         default: 'master'
         required: false
         type: string
+  push:
+    branches:
+      - test/code-check
 jobs:
   coverage:
     runs-on: ubuntu-latest
